--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export("%||%")
 export(add_author)
 export(author)
 export(author_table)
+export(cermine2bib)
 export(check_orcid)
 export(concat_tables)
 export(credit_roles)
@@ -37,6 +38,7 @@ export(openalex)
 export(paper)
 export(papercheck_app)
 export(pdf2grobid)
+export(read_cermine)
 export(read_grobid)
 export(read_text)
 export(report)
