--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,6 +27,7 @@ jobs:
         with:
           extra-packages: any::covr, any::xml2
           needs: coverage
+          cache-version: 1
 
       - name: Test coverage
         run: |
