--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,7 @@ Authors@R: c(
            family = "Werner",
            role = c("ctb"),
            email = "jakub@jakubwerner.com",
-           comment = c(ORCID = "0009-0004-0388-0362"))
-)
+           comment = c(ORCID = "0009-0004-0388-0362")))
 Description: A modular, extendable system for automatically checking scientific papers for best practices using text search, R code, and/or (optional) LLM queries.
 License: AGPL (>= 3)
 Encoding: UTF-8
