Power module refinement and unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,8 @@ export(aspredicted_links)
 export(aspredicted_retrieve)
 export(author)
 export(author_table)
-export(bib_add_dois)
 export(bibsearch)
+export(bibtex_add_dois)
 export(check_orcid)
 export(concat_tables)
 export(credit_roles)
@@ -45,6 +45,7 @@ export(llm)
 export(llm_max_calls)
 export(llm_model)
 export(llm_model_list)
+export(llm_use)
 export(module_help)
 export(module_info)
 export(module_list)
